Add support for multiple workspaces (#160)
* Add support for multiple workspaces

Previously, the language server only knew about a single workspace root,
so if your editor was using [WorkspaceFolders](https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#workspace_workspaceFolders)
the server would just pick the first one, and not load any others. This
commit allows the server to load multiple workspaces. The primary
challenge was handling state changes to individual workspaces
independently. We use client-side file watchers and the
`didChangeWatchedFiles` notification to make sure projects are up to
date with new and deleted Smithy files, and any changes to build files
(i.e. smithy-build.json). `didChangeWatchedFiles` sends a flat list of
file events - not partitioned by workspace - so we have to figure out
which projects each change applies to. This is done by creating a
`PathMatcher` for each project's smithy files and build files, then
matching on each file event. This way, we can apply changes to each
individual project, rather than reloading everything. Selectors were
also updated to select from all available projects.

* Fix file patterns for windows

The file patterns we were using for telling the client which files to
watch, and to match file events in `didChangeWatchedFiles` to projects,
were not working properly on windows because they didn't use the correct
file separator.