@@ -6,17 +6,18 @@
 package software.amazon.smithy.lsp.handler;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.endsWith;
+import static org.hamcrest.Matchers.hasItem;
 
+import java.nio.file.FileSystems;
+import java.nio.file.PathMatcher;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.eclipse.lsp4j.DidChangeWatchedFilesRegistrationOptions;
 import org.eclipse.lsp4j.Registration;
 import org.junit.jupiter.api.Test;
 import software.amazon.smithy.build.model.SmithyBuildConfig;
 import software.amazon.smithy.lsp.TestWorkspace;
+import software.amazon.smithy.lsp.UtilMatchers;
 import software.amazon.smithy.lsp.project.Project;
 import software.amazon.smithy.lsp.project.ProjectLoader;
 import software.amazon.smithy.lsp.project.ProjectManager;
@@ -27,14 +28,14 @@ public class FileWatcherRegistrationHandlerTest {
     public void createsCorrectRegistrations() {
         TestWorkspace workspace = TestWorkspace.builder()
                 .withSourceDir(new TestWorkspace.Dir()
-                        .path("foo")
+                        .withPath("foo")
                         .withSourceDir(new TestWorkspace.Dir()
-                                .path("bar")
+                                .withPath("bar")
                                 .withSourceFile("bar.smithy", "")
                                 .withSourceFile("baz.smithy", ""))
                         .withSourceFile("baz.smithy", ""))
                 .withSourceDir(new TestWorkspace.Dir()
-                        .path("other")
+                        .withPath("other")
                         .withSourceFile("other.smithy", ""))
                 .withSourceFile("abc.smithy", "")
                 .withConfig(SmithyBuildConfig.builder()
@@ -44,17 +45,21 @@ public class FileWatcherRegistrationHandlerTest {
                 .build();
 
         Project project = ProjectLoader.load(workspace.getRoot(), new ProjectManager(), new HashSet<>()).unwrap();
-        List<String> watcherPatterns = FileWatcherRegistrationHandler.getSmithyFileWatcherRegistrations(project)
+        List<PathMatcher> matchers = FileWatcherRegistrationHandler.getSmithyFileWatcherRegistrations(List.of(project))
                 .stream()
                 .map(Registration::getRegisterOptions)
                 .map(o -> (DidChangeWatchedFilesRegistrationOptions) o)
                 .flatMap(options -> options.getWatchers().stream())
                 .map(watcher -> watcher.getGlobPattern().getLeft())
-                .collect(Collectors.toList());
+                // The watcher glob patterns will look different between windows/unix, so turning
+                // them into path matchers lets us do platform-agnostic assertions.
+                .map(pattern -> FileSystems.getDefault().getPathMatcher("glob:" + pattern))
+                .toList();
 
-        assertThat(watcherPatterns, containsInAnyOrder(
-                endsWith("foo/**/*.{smithy,json}"),
-                endsWith("other/**/*.{smithy,json}"),
-                endsWith("abc.smithy")));
+        assertThat(matchers, hasItem(UtilMatchers.canMatchPath(workspace.getRoot().resolve("foo/abc.smithy"))));
+        assertThat(matchers, hasItem(UtilMatchers.canMatchPath(workspace.getRoot().resolve("foo/foo/abc/def.smithy"))));
+        assertThat(matchers, hasItem(UtilMatchers.canMatchPath(workspace.getRoot().resolve("other/abc.smithy"))));
+        assertThat(matchers, hasItem(UtilMatchers.canMatchPath(workspace.getRoot().resolve("other/foo/abc.smithy"))));
+        assertThat(matchers, hasItem(UtilMatchers.canMatchPath(workspace.getRoot().resolve("abc.smithy"))));
     }
 }
